--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.25.2",
+    "bcrypt": "^6.0.0",
     "mongodb": "^6.16.0",
     "next": "15.1.8",
     "react": "^19.0.0",
