--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.25.2",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.16.0",
     "jose": "^6.0.11",
     "mongodb": "^6.16.0",
     "next": "15.1.8",
@@ -18,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
     "zod": "^3.25.28"
   },
   "devDependencies": {
